[build-system]
requires = [
	"setuptools>=69",
	"wheel",
	"Cython>=0.29",
	"numpy>=1.20",
]
build-backend = "setuptools.build_meta"

[project]
name = "waterz"
version = "0.9.6"
description = "Simple watershed and agglomeration for affinity graphs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
	{ name = "Jan Funke" },
	{ name = "Jingpeng Wu" },
]
keywords = ["watershed", "segmentation", "affinity", "agglomeration", "connectomics"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/funkey/waterz"
Repository = "https://github.com/funkey/waterz"
Issues = "https://github.com/funkey/waterz/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
waterz = [
	"*.pyx",
	"*.hpp",
	"*.h",
	"backend/*.hpp",
]

# uv dependency groups for development
[dependency-groups]
dev = [
	"pytest",
	"pytest-cov",
	"pre-commit",
	"ruff",
	"numpy",
]
